--- a/crates/ftui-extras/Cargo.toml
+++ b/crates/ftui-extras/Cargo.toml
@@ -2,16 +2,21 @@
 name = "ftui-extras"
 version = "0.1.0"
 edition = "2024"
-publish = false
+license = "MIT"
+description = "Feature-gated extras for FrankenTUI (markdown, charts, clipboard, themes)."
+repository = "https://github.com/Dicklesworthstone/frankentui"
+homepage = "https://github.com/Dicklesworthstone/frankentui"
+documentation = "https://docs.rs/ftui-extras"
+readme = "../../README.md"
 
 [dependencies]
-ftui-runtime = { path = "../ftui-runtime" }
-ftui-widgets = { path = "../ftui-widgets", optional = true }
-ftui-core = { path = "../ftui-core", optional = true }
-ftui-render = { path = "../ftui-render", optional = true }
-ftui-style = { path = "../ftui-style", optional = true }
-ftui-text = { path = "../ftui-text", optional = true }
-ftui-pty = { path = "../ftui-pty", optional = true }
+ftui-runtime = { path = "../ftui-runtime", version = "0.1.0" }
+ftui-widgets = { path = "../ftui-widgets", version = "0.1.0", optional = true }
+ftui-core = { path = "../ftui-core", version = "0.1.0", optional = true }
+ftui-render = { path = "../ftui-render", version = "0.1.0", optional = true }
+ftui-style = { path = "../ftui-style", version = "0.1.0", optional = true }
+ftui-text = { path = "../ftui-text", version = "0.1.0", optional = true }
+ftui-pty = { path = "../ftui-pty", version = "0.1.0", optional = true }
 base64 = { version = "0.22.1", optional = true }
 image = { version = "0.25.9", default-features = false, features = ["png", "gif", "jpeg"], optional = true }
 pulldown-cmark = { version = "0.13.0", default-features = false, optional = true }
@@ -96,12 +101,12 @@ help = [
 tracing = "0.1"
 tracing-subscriber = "0.3"
 criterion = { version = "0.8.2", features = ["html_reports"] }
-ftui-harness = { path = "../ftui-harness" }
-ftui-core = { path = "../ftui-core" }
-ftui-render = { path = "../ftui-render" }
-ftui-widgets = { path = "../ftui-widgets" }
-ftui-pty = { path = "../ftui-pty" }
-ftui-style = { path = "../ftui-style" }
+ftui-harness = { path = "../ftui-harness", version = "0.1.0" }
+ftui-core = { path = "../ftui-core", version = "0.1.0" }
+ftui-render = { path = "../ftui-render", version = "0.1.0" }
+ftui-widgets = { path = "../ftui-widgets", version = "0.1.0" }
+ftui-pty = { path = "../ftui-pty", version = "0.1.0" }
+ftui-style = { path = "../ftui-style", version = "0.1.0" }
 portable-pty = "0.9.0"
 
 [[bench]]
