--- a/crates/ftui-i18n/Cargo.toml
+++ b/crates/ftui-i18n/Cargo.toml
@@ -2,7 +2,12 @@
 name = "ftui-i18n"
 version = "0.1.0"
 edition = "2024"
-publish = false
+license = "MIT"
+description = "Localization catalog and interpolation utilities for FrankenTUI."
+repository = "https://github.com/Dicklesworthstone/frankentui"
+homepage = "https://github.com/Dicklesworthstone/frankentui"
+documentation = "https://docs.rs/ftui-i18n"
+readme = "../../README.md"
 
 [dependencies]
 
