--- a/crates/ftui-layout/Cargo.toml
+++ b/crates/ftui-layout/Cargo.toml
@@ -2,10 +2,15 @@
 name = "ftui-layout"
 version = "0.1.0"
 edition = "2024"
-publish = false
+license = "MIT"
+description = "Flex and grid layout solvers for FrankenTUI."
+repository = "https://github.com/Dicklesworthstone/frankentui"
+homepage = "https://github.com/Dicklesworthstone/frankentui"
+documentation = "https://docs.rs/ftui-layout"
+readme = "../../README.md"
 
 [dependencies]
-ftui-core = { path = "../ftui-core" }
+ftui-core = { path = "../ftui-core", version = "0.1.0" }
 
 [dev-dependencies]
 criterion = { version = "0.8.2", features = ["html_reports"] }
