--- a/crates/ftui-render/Cargo.toml
+++ b/crates/ftui-render/Cargo.toml
@@ -2,7 +2,12 @@
 name = "ftui-render"
 version = "0.1.0"
 edition = "2024"
-publish = false
+license = "MIT"
+description = "Render kernel: cells, buffers, diffs, and ANSI presentation."
+repository = "https://github.com/Dicklesworthstone/frankentui"
+homepage = "https://github.com/Dicklesworthstone/frankentui"
+documentation = "https://docs.rs/ftui-render"
+readme = "../../README.md"
 
 [features]
 default = []
@@ -16,7 +21,7 @@ smallvec = "1.15.1"
 unicode-width = "0.2.2"
 unicode-display-width = "0.3.0"
 unicode-segmentation = "1.12.0"
-ftui-core = { path = "../ftui-core" }
+ftui-core = { path = "../ftui-core", version = "0.1.0" }
 tracing = { version = "0.1", optional = true }
 # Note: ftui-render is the core kernel and should not depend on ftui-style.
 # ftui-style depends on ftui-render (not vice versa).
@@ -25,12 +30,12 @@ tracing = { version = "0.1", optional = true }
 
 [dev-dependencies]
 criterion = { version = "0.8.2", features = ["html_reports"] }
-ftui-core = { path = "../ftui-core" }
-ftui-harness = { path = "../ftui-harness" }
-ftui-layout = { path = "../ftui-layout" }
-ftui-style = { path = "../ftui-style" }
-ftui-text = { path = "../ftui-text" }
-ftui-widgets = { path = "../ftui-widgets" }
+ftui-core = { path = "../ftui-core", version = "0.1.0" }
+ftui-harness = { path = "../ftui-harness", version = "0.1.0" }
+ftui-layout = { path = "../ftui-layout", version = "0.1.0" }
+ftui-style = { path = "../ftui-style", version = "0.1.0" }
+ftui-text = { path = "../ftui-text", version = "0.1.0" }
+ftui-widgets = { path = "../ftui-widgets", version = "0.1.0" }
 proptest = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
