--- a/crates/ftui-text/Cargo.toml
+++ b/crates/ftui-text/Cargo.toml
@@ -2,7 +2,12 @@
 name = "ftui-text"
 version = "0.1.0"
 edition = "2024"
-publish = false
+license = "MIT"
+description = "Text layout, wrapping, and grapheme width for FrankenTUI."
+repository = "https://github.com/Dicklesworthstone/frankentui"
+homepage = "https://github.com/Dicklesworthstone/frankentui"
+documentation = "https://docs.rs/ftui-text"
+readme = "../../README.md"
 
 [features]
 default = []
@@ -15,9 +20,9 @@ normalization = ["dep:unicode-normalization"]
 unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"] }
 
 [dependencies]
-ftui-layout = { path = "../ftui-layout" }
-ftui-style = { path = "../ftui-style" }
-ftui-render = { path = "../ftui-render", optional = true }
+ftui-layout = { path = "../ftui-layout", version = "0.1.0" }
+ftui-style = { path = "../ftui-style", version = "0.1.0" }
+ftui-render = { path = "../ftui-render", version = "0.1.0", optional = true }
 unicode-display-width = "0.3.0"
 unicode-segmentation = "1.12.0"
 unicode-width = "0.2.2"
