--- a/crates/ftui/Cargo.toml
+++ b/crates/ftui/Cargo.toml
@@ -2,14 +2,19 @@
 name = "ftui"
 version = "0.1.0"
 edition = "2024"
-publish = false
+license = "MIT"
+description = "FrankenTUI public facade and prelude."
+repository = "https://github.com/Dicklesworthstone/frankentui"
+homepage = "https://github.com/Dicklesworthstone/frankentui"
+documentation = "https://docs.rs/ftui"
+readme = "../../README.md"
 
 [dependencies]
-ftui-core = { path = "../ftui-core" }
-ftui-render = { path = "../ftui-render" }
-ftui-style = { path = "../ftui-style" }
-ftui-text = { path = "../ftui-text" }
-ftui-layout = { path = "../ftui-layout" }
-ftui-runtime = { path = "../ftui-runtime" }
-ftui-widgets = { path = "../ftui-widgets" }
-ftui-extras = { path = "../ftui-extras" }
+ftui-core = { path = "../ftui-core", version = "0.1.0" }
+ftui-render = { path = "../ftui-render", version = "0.1.0" }
+ftui-style = { path = "../ftui-style", version = "0.1.0" }
+ftui-text = { path = "../ftui-text", version = "0.1.0" }
+ftui-layout = { path = "../ftui-layout", version = "0.1.0" }
+ftui-runtime = { path = "../ftui-runtime", version = "0.1.0" }
+ftui-widgets = { path = "../ftui-widgets", version = "0.1.0" }
+ftui-extras = { path = "../ftui-extras", version = "0.1.0" }
