--- a/crates/ftui-text/Cargo.toml
+++ b/crates/ftui-text/Cargo.toml
@@ -20,12 +20,11 @@ normalization = ["dep:unicode-normalization"]
 unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"] }
 
 [dependencies]
+ftui-core = { path = "../ftui-core", version = "0.1.0" }
 ftui-layout = { path = "../ftui-layout", version = "0.1.0" }
 ftui-style = { path = "../ftui-style", version = "0.1.0" }
 ftui-render = { path = "../ftui-render", version = "0.1.0", optional = true }
-unicode-display-width = "0.3.0"
 unicode-segmentation = "1.12.0"
-unicode-width = "0.2.2"
 smallvec = "1.15.1"
 tracing = "0.1"
 lru = "0.16.3"
@@ -38,7 +37,6 @@ unicode-normalization = { version = "0.1", optional = true }
 proptest = "1"
 tracing-test = "0.2"
 criterion = { version = "0.8.2", features = ["html_reports"] }
-unicode-width = "0.2.2"
 
 [[bench]]
 name = "width_bench"
