licensing: adopt MIT + OpenAI/Anthropic rider across workspace metadata
Summary:

- Replaces top-level LICENSE text with MIT License (with OpenAI/Anthropic Rider), including the additional restriction clauses exactly as requested.

- Updates README badge and License section to reference MIT+Rider instead of plain MIT.

- Replaces per-crate `license = "MIT"` declarations with `license-file = "../../LICENSE"` across the workspace crates so published metadata aligns with the rider text.

Verification:

- Re-scanned LICENSE/README/Cargo.toml files for plain-MIT markers and removed all plain-MIT license declarations.

- Ran `cargo metadata --no-deps` to confirm manifest parsing remains valid.

--- a/crates/doctor_franktentui/Cargo.toml
+++ b/crates/doctor_franktentui/Cargo.toml
@@ -3,7 +3,7 @@ name = "doctor_franktentui"
 version = "0.2.0"
 edition = "2024"
 publish = false
-license = "MIT"
+license-file = "../../LICENSE"
 description = "Integrated TUI capture, seeding, suite reporting, and diagnostics for FrankenTUI agent workflows."
 repository = "https://github.com/Dicklesworthstone/frankentui"
 homepage = "https://github.com/Dicklesworthstone/frankentui"
