--- a/crates/ftui-runtime/Cargo.toml
+++ b/crates/ftui-runtime/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ftui-runtime"
 version = "0.2.0"
 edition = "2024"
-license = "MIT"
+license-file = "../../LICENSE"
 description = "Elm-style runtime loop and subscriptions for FrankenTUI."
 repository = "https://github.com/Dicklesworthstone/frankentui"
 homepage = "https://github.com/Dicklesworthstone/frankentui"
