--- a/crates/ftui-widgets/Cargo.toml
+++ b/crates/ftui-widgets/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ftui-widgets"
 version = "0.2.0"
 edition = "2024"
-license = "MIT"
+license-file = "../../LICENSE"
 description = "Widget library built on FrankenTUI render and layout."
 repository = "https://github.com/Dicklesworthstone/frankentui"
 homepage = "https://github.com/Dicklesworthstone/frankentui"
