--- a/crates/ftui-backend/Cargo.toml
+++ b/crates/ftui-backend/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ftui-backend"
 version = "0.2.0"
 edition = "2024"
-license = "MIT"
+license-file = "../../LICENSE"
 description = "Backend traits for FrankenTUI: platform abstraction for input, presentation, and time."
 repository = "https://github.com/Dicklesworthstone/frankentui"
 homepage = "https://github.com/Dicklesworthstone/frankentui"
