--- a/crates/ftui-core/Cargo.toml
+++ b/crates/ftui-core/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ftui-core"
 version = "0.2.0"
 edition = "2024"
-license = "MIT"
+license-file = "../../LICENSE"
 description = "Terminal lifecycle, capabilities, and event parsing for FrankenTUI."
 repository = "https://github.com/Dicklesworthstone/frankentui"
 homepage = "https://github.com/Dicklesworthstone/frankentui"
