--- a/crates/ftui-demo-showcase/Cargo.toml
+++ b/crates/ftui-demo-showcase/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 edition = "2024"
 publish = false
 default-run = "ftui-demo-showcase"
-license = "MIT"
+license-file = "../../LICENSE"
 description = "Demo showcase app and snapshots for FrankenTUI."
 repository = "https://github.com/Dicklesworthstone/frankentui"
 homepage = "https://github.com/Dicklesworthstone/frankentui"
