--- a/crates/ftui-extras/Cargo.toml
+++ b/crates/ftui-extras/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ftui-extras"
 version = "0.2.0"
 edition = "2024"
-license = "MIT"
+license-file = "../../LICENSE"
 description = "Feature-gated extras for FrankenTUI (markdown, charts, clipboard, themes)."
 repository = "https://github.com/Dicklesworthstone/frankentui"
 homepage = "https://github.com/Dicklesworthstone/frankentui"
