--- a/crates/ftui-i18n/Cargo.toml
+++ b/crates/ftui-i18n/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ftui-i18n"
 version = "0.2.0"
 edition = "2024"
-license = "MIT"
+license-file = "../../LICENSE"
 description = "Localization catalog and interpolation utilities for FrankenTUI."
 repository = "https://github.com/Dicklesworthstone/frankentui"
 homepage = "https://github.com/Dicklesworthstone/frankentui"
