--- a/crates/ftui-showcase-wasm/Cargo.toml
+++ b/crates/ftui-showcase-wasm/Cargo.toml
@@ -3,7 +3,7 @@ name = "ftui-showcase-wasm"
 version = "0.2.0"
 edition = "2024"
 publish = false
-license = "MIT"
+license-file = "../../LICENSE"
 description = "WASM showcase runner for FrankenTUI demo app."
 repository = "https://github.com/Dicklesworthstone/frankentui"
 homepage = "https://github.com/Dicklesworthstone/frankentui"
