--- a/crates/ftui-simd/Cargo.toml
+++ b/crates/ftui-simd/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ftui-simd"
 version = "0.2.0"
 edition = "2024"
-license = "MIT"
+license-file = "../../LICENSE"
 description = "Optional safe SIMD-friendly optimizations for FrankenTUI."
 repository = "https://github.com/Dicklesworthstone/frankentui"
 homepage = "https://github.com/Dicklesworthstone/frankentui"
