--- a/crates/ftui-web/Cargo.toml
+++ b/crates/ftui-web/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ftui-web"
 version = "0.2.0"
 edition = "2024"
-license = "MIT"
+license-file = "../../LICENSE"
 description = "WASM backend implementation for FrankenTUI (host-driven, deterministic)."
 repository = "https://github.com/Dicklesworthstone/frankentui"
 homepage = "https://github.com/Dicklesworthstone/frankentui"
