--- a/crates/ftui-terrain-wasm/Cargo.toml
+++ b/crates/ftui-terrain-wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ftui-terrain-wasm"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 publish = false
 description = "WASM terrain viewer using FrankenTUI braille rendering."
@@ -27,4 +27,4 @@ getrandom = { version = "0.3.4", features = ["wasm_js"] }
 getrandom_04 = { package = "getrandom", version = "0.4.1", features = ["wasm_js"] }
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = ["-Oz"]
+wasm-opt = false
